--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Pagina de inicio que muestra un breve resumen del contenido de los demás archivos html">
-    <title>regufiolunar.cl | Un lugar para sanar</title>
+    <meta name="description" content="Refugio Lunar es una iniciativa que busca ayudar a las personas mediante las terapias holisticas">
+    <meta name="keywords" content="Holistica, holistico, ayuda, Luna, refugio, lunar, terapias">
+    <title> Inicio | Refugio Lunar - Un lugar para sanar</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -16,7 +16,7 @@
 <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
-        <a class="navbar-brand refugiolunar" href="./index.html">✦ Refugio Lunar  </a>
+        <a class="navbar-brand refugiolunar" href="./index.html">Refugio Lunar</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,19 +39,19 @@
               <a class="nav-link dropdown-toggle links" href="./pages/terapias.html" role="button"     data-bs-toggle="dropdown" aria-expanded="false">Terapias</a>
               <ul class="dropdown-menu">
                 <li class="translate">
-                  <a class="dropdown-item translate" href="./pages/terapias.html">Alineación de chakras</a>
+                  <a class="dropdown-item" href="./pages/terapias.html">Alineación de chakras</a>
                 </li>
                 <li>
-                  <a class="dropdown-item translate" href="./pages/terapias.html">Carta astral</a>
+                  <a class="dropdown-item" href="./pages/terapias.html">Carta astral</a>
                 </li>
                 <li>
-                  <a class="dropdown-item translate" href="./pages/terapias.html">Constelación familiar</a>
+                  <a class="dropdown-item" href="./pages/terapias.html">Constelación familiar</a>
                 </li>
                 <li>
-                  <a class="dropdown-item translate" href="./pages/terapias.html">Tarot</a>
+                  <a class="dropdown-item" href="./pages/terapias.html">Tarot</a>
                 </li>
                 <li>
-                  <a class="dropdown-item translate" href="./pages/terapias.html">Registros akashicos</a>
+                  <a class="dropdown-item" href="./pages/terapias.html">Registros akashicos</a>
                 </li>
               </ul>
             </li>
