--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -6,8 +6,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>regufiolunar.cl | Un lugar para sanar</title>
-  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
+  <meta name="description" content="Busca el día que más te acomode y agenda una terapia para que pueda mostrarte mis conocimientos">
+  <meta name="keywords" content="hora, agenda, disponbilidad, terapia, registros, akashicos, alineacion, chakras, carta, astral, constelacion, mes, fecha, hora">
+  <title> Agenda tu hora | Refugio Luanr - Un lugar para sanar</title>
   <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -18,7 +19,7 @@
   <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-lg sticky-top navegacion">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html"> ✦ Refugio Lunar </a>
+      <a class="navbar-brand refugiolunar" href="../index.html">Refugio Lunar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
         aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
