--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>regufiolunar.cl | Un lugar para sanar</title>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
+    <meta name="description" content="Si tienes dudas y/o consultas sobre las terapias, sobre mi trayectoria o el como agendar, escribenos...">
+    <meta name="keywords" content="contacto, dudas, consulta, terapias, trayectoria, escribenos, contactanos, inquietudes">
+    <title> Contáctanos | Refugio Lunar - Un lugar para sanar</title>
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
@@ -16,7 +17,7 @@
 <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> ✦ Refugio Lunar </a>
+        <a class="navbar-brand refugiolunar" href="../index.html">Refugio Lunar</a>
         <button
           class="navbar-toggler"
           type="button"
