--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -5,58 +5,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>regufiolunar.cl | Un lugar para sanar</title>
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
+    <meta name="description" content="Mi nombre es Nicole Fuenzalida y soy terapeuta holistica, he explorado distintos cursos con el fin de ayudar a la comunidad">
+    <meta name="keywords" content="Nicole, Fuenzalida, reikista, carta astral, conocimientos, estudios holisticos, cursos">
+    <title> Sobre mí | Refugio Lunar - Un lugar para sanar</title>
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
 
   <body>
- <!-- Barra de navegación --> 
-    <nav class="navbar navbar-expand-lg sticky-top navegacion">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> ✦ Refugio Lunar </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarScroll"
-          aria-controls="navbarScroll"
-          aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav menu me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px ">
-            <li class="nav-item translate"><a class="nav-link inicio" aria-current="page" href="../index.html">Inicio</a></li>
-            <li class="nav-item translate"><a class="nav-link links" href="quiensoy.html">Sobre mí</a></li>
-            <li class="nav-item translate dropdown"><a class="nav-link dropdown-toggle links" href="terapias.html" role="button"     data-bs-toggle="dropdown" aria-expanded="false">Terapias</a>
-              <ul class="dropdown-menu">
-                <li class="translate">
-                  <a class="dropdown-item" href="terapias.html">Alineación de chakras</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="terapias.html">Carta astral</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="terapias.html">Constelación familiar</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="terapias.html">Tarot</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="terapias.html">Registros akashicos</a>
-                </li>
-              </ul>
+ <!-- Barra de navegación -->
+ <nav class="navbar navbar-expand-lg sticky-top navegacion">
+  <div class="container-fluid">
+    <a class="navbar-brand refugiolunar" href="../index.html">Refugio Lunar</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarScroll"
+      aria-controls="navbarScroll"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarScroll">
+      <ul class="navbar-nav menu me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px ">
+        <li class="nav-item translate"><a class="nav-link inicio" aria-current="page" href="../index.html">Inicio</a></li>
+        <li class="nav-item translate"><a class="nav-link links" href="quiensoy.html">Sobre mí</a></li>
+        <li class="nav-item translate dropdown"><a class="nav-link dropdown-toggle links" href="terapias.html" role="button"     data-bs-toggle="dropdown" aria-expanded="false">Terapias</a>
+          <ul class="dropdown-menu">
+            <li class="translate">
+              <a class="dropdown-item" href="terapias.html">Alineación de chakras</a>
             </li>
-            <li class="nav-item translate"><a class="nav-link links" href="agenda.html">Agenda</a></li>
-            <li class="nav-item translate"><a class="nav-link links" href="contacto.html">Contacto</a></li>
+            <li class="translate">
+              <a class="dropdown-item" href="terapias.html">Carta astral</a>
+            </li>
+            <li class="translate">
+              <a class="dropdown-item" href="terapias.html">Constelación familiar</a>
+            </li >
+            <li class="translate">
+              <a class="dropdown-item" href="terapias.html">Tarot</a>
+            </li>
+            <li class="translate">
+              <a class="dropdown-item" href="terapias.html">Registros akashicos</a>
+            </li>
           </ul>
-          <img class="logo rotate-vert-center" src="../images/logo.png" />
-         </div>
-      </div>
-    </nav>
+        </li>
+        <li class="nav-item translate"><a class="nav-link links" href="agenda.html">Agenda</a></li>
+        <li class="nav-item translate"><a class="nav-link links" href="contacto.html">Contacto</a></li>
+      </ul>
+      <img class="logo rotate-vert-center" src="../images/logo.png" />
+     </div>
+  </div>
+</nav>
 
       <div class="grid4">
         <div class="grid4__img">
