--- a/pages/terapias.html
+++ b/pages/terapias.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>regufiolunar.cl | Un lugar para sanar</title>
+    <meta name="description" content="Te invito a conocer las distintas terapias que trato de impartir a mis pacientes">
+    <meta name="keywords" content="terapias, reiki, carta astral, alineacion, chakras, familia, constelacion, vidas, pasadas, autoayuda, autoconocimiento, astros, estrellas, universo, persona">
+    <title> Nuestras terapias | Refugio Lunar - Un lugar para sanar</title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway:500,600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -16,7 +18,7 @@
  <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg sticky-top navegacion">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> ✦ Refugio Lunar </a>
+        <a class="navbar-brand refugiolunar" href="../index.html">Refugio Lunar</a>
         <button
           class="navbar-toggler"
           type="button"
