Cambiando de color el hover de nav, quitando elementos del carrusel del index en la mediaquery

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="carousel-item active">
               <img src="./images/fondo1.jpeg" class="d-block w-100">
           <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
-            <h1 class="subtitulo translate">Refugio Lunar</h1>
+            <h1 class="subtitulo">Refugio Lunar</h1>
             <p class="descripcion">Es un espacio que busca brindar ayuda, comprensión y solución a los problemas, inquietudes de las personas a través de las terapias holisticas</p>
           </div>
           </div>
@@ -78,7 +78,7 @@
           <div class="carousel-item">
             <img src="./images/fondo2.jpeg" class="d-block w-100">
             <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
-              <h1 class="display-1 text-capitalize subtitulo translate">Terapias</h1>
+              <h1 class="display-1 text-capitalize subtitulo">Terapias</h1>
               <p class="descripcion">Gracias a la formación constante de nuestra fundadora, es que ponemos a disposición distintas terapias, las cuales te invito a conocer a continuación...</p>
               <form action="./pages/terapias.html">
               <button type="submit" class="boton btn btn-light">Terapias</button>
@@ -89,7 +89,7 @@
           <div class="carousel-item">
             <img src="./images/fondo3.jpeg" class="d-block w-100">
             <div class="carousel-caption d-flex justify-content-center align-items-center top-0">
-              <h1 class="display-1 text-capitalize subtitulo translate">Contacto</h1>
+              <h1 class="display-1 text-capitalize subtitulo">Contacto</h1>
               <p class="descripcion">¿Tienes dudas? - ¿Necesitas agendar? Te invitamos a resolver tus dudas, solicitudes, etc, presionado el siguiente botón:</p>
               <form action="./pages/contacto.html">
                 <button type="submit" class="boton btn btn-light">Contacto</button>
@@ -113,18 +113,18 @@
         <div class="row row-cols-1 row-cols-md-3 g-3">
           <div class="col">
             <div class="card">
-              <img src="./images/tarot1.jpg" class="card-img-top">
+              <img src="./images/alineaciondechakras.jpeg" class="card-img-top">
               <div class="card-body">
-                <h5 class="card__title">Tarot</h5>
+                <h5 class="card__title">Alineación de chakras</h5>
                 <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card">
-              <img src="./images/alineaciondechakras.jpeg" class="card-img-top">
+              <img src="./images/Tarot1.jpg" class="card-img-top">
               <div class="card-body">
-                <h5 class="card__title">Alineacion de Chakras</h5>
+                <h5 class="card__title">Tarot</h5>
                 <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
