--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link links" href="./pages/quiensoy.html">Sobre mí</a>
             </li>
             <li class="nav-item translate dropdown">
-              <a class="nav-link dropdown-toggle links" href="./pages/terapias.html" role="button"     data-bs-toggle="dropdown" aria-expanded="false">Terapias</a>
+              <a class="nav-link  links" href="./pages/terapias.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Terapias</a>
               <ul class="dropdown-menu">
                 <li class="translate">
                   <a class="dropdown-item" href="./pages/terapias.html">Alineación de chakras</a>
