Editando los textos lorems

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <img src="./images/alineaciondechakras.jpeg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card__title">Alineación de chakras</h5>
-                <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card__text">Terapia que permite desbloquear chakras obstruidos por las energías que vamos canalizando a diario.</p>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
               <img src="./images/Tarot1.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card__title">Tarot</h5>
-                <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card__text">Hay diversas tiradas al igual que distintos tipos de tarot para resolver tus inquietudes o preguntas.</p>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
               <img src="./images/Carta-Astral.jpeg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card__title">Carta astral</h5>
-                <p class="card__text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card__text">Herramienta que nos permite el autodescubrimiento, según como se planteó el universo al momento de tu nacimiento.</p>
               </div>
             </div>
           </div>
